# raigor_4RL

./: README.md
raigor/raigor_bringup/: CMakeLists.txt  package.xml
raigor/raigor_bringup/launch/: for_rl.launch  gazebo_test.launch  init_pose_start_controllers.launch  with_moveit_eod.launch  without_moveit_demo.launch
raigor/raigor_description/: CMakeLists.txt  package.xml
raigor/raigor_description/rviz/: all.rviz
raigor/raigor_gazebo/: CMakeLists.txt  package.xml
raigor/raigor_gazebo/world/: demo.world  eod_scene.world
raigor_control/gazebo_continuous_track/config/: base_controller.yaml
raigor_control/raigor_cartesian_velocity_control/: CMakeLists.txt  package.xml  raigor_cartesian_velocity_control_plugin.xml
raigor_control/raigor_cartesian_velocity_control/config/: controllers.yaml
raigor_control/raigor_cartesian_velocity_control/launch/: load_controller.launch
raigor_control/raigor_cartesian_velocity_control/src/: cartesian_state_controller.cpp  cartesian_velocity_controller.cpp
raigor_control/raigor_pid_control/: CMakeLists.txt  package.xml
raigor_control/raigor_pid_control/config/: pid_params.yaml  raigor_vel_controller.yaml
raigor_control/raigor_pid_control/launch/: pid_controller.launch
raigor_control/raigor_pid_control/src/: pid_controller_node.cpp
raigor_control/teleop_twist_keyboard/: twist_to_std_msg.py
raigor_perception/raigor_general_perception/: CMakeLists.txt  package.xml
raigor_perception/raigor_general_perception/launch/: raigor_ee_tf.launch  raigor_ft_gazebo.launch  raigor_gazebo_odom.launch  raigor_octomap.launch  raigor_odometry.launch  (+2 more)
raigor_planning/raigor_general_planning/: CMakeLists.txt  package.xml
raigor_planning/raigor_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
tools/tracker/: CMakeLists.txt  package.xml
tools/tracker/include/: tracker.h
tools/tracker/launch/: data_instill.launch
tools/tracker/src/: tracker.cpp
(+58 files in other folders)
